// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pill Renders the Pill component with the danger variant 1`] = `
<DocumentFragment>
  <span
    class="c-gIiHtB c-gIiHtB-cGyTej-variant-danger"
  >
    test
  </span>
</DocumentFragment>
`;

exports[`Pill Renders the Pill component with the info variant 1`] = `
<DocumentFragment>
  <span
    class="c-gIiHtB c-gIiHtB-dGJyPl-variant-info"
  >
    test
  </span>
</DocumentFragment>
`;

exports[`Pill Renders the Pill component with the success variant 1`] = `
<DocumentFragment>
  <span
    class="c-gIiHtB c-gIiHtB-ypDbH-variant-success"
  >
    test
  </span>
</DocumentFragment>
`;

exports[`Pill Renders the Pill component with the warning variant 1`] = `
<DocumentFragment>
  <span
    class="c-gIiHtB c-gIiHtB-lghveN-variant-warning"
  >
    test
  </span>
</DocumentFragment>
`;
